@@ -22,7 +22,8 @@ public class FoxyasGuiContainerHandler implements IGuiContainerHandler<FoxyasInv
         int extraWidth = gui.getXSize();
         int extraHeight = ExtraInvVHeight;
 
-        Rect2i o = new Rect2i(extraX, extraY, extraWidth, extraHeight);
-        return Collections.singletonList(o);
+        Rect2i normalInventory = new Rect2i(i, j, gui.getXSize(), gui.getYSize());
+        Rect2i extraInventory = new Rect2i(extraX, extraY, 227, 81);
+        return List.of(normalInventory, extraInventory);
     }
 }
